--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,11 @@
 			<version>2.4.1</version>
 		</dependency>
 
-	</dependencies>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
